--- a/PART 2/TwentyOne/Casinoe/Casinoe.csproj
+++ b/PART 2/TwentyOne/Casinoe/Casinoe.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{239621A1-495A-402A-9407-1819154CFB6D}</ProjectGuid>
+    <ProjectGuid>{C410F900-2600-44EA-8D51-A879B11EEF9B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Casino</RootNamespace>
-    <AssemblyName>Casino</AssemblyName>
+    <RootNamespace>Casinoe</RootNamespace>
+    <AssemblyName>Casinoe</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
