--- a/PART 2/TwentyOne/Module3_ClassesAndObjectsTutorial/TwentyOne.csproj
+++ b/PART 2/TwentyOne/Module3_ClassesAndObjectsTutorial/TwentyOne.csproj
@@ -37,6 +37,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Casino\bin\Debug\netcoreapp3.1\Casino.dll</HintPath>
     </Reference>
+    <Reference Include="Casinoe">
+      <HintPath>..\Casinoe\bin\Debug\Casinoe.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
